Regression r130057: incorrect block pref width for alternating InlineFlow and inline Replaced https://bugs.webkit.org/show_bug.cgi?id=99194

Reviewed by Eric Seidel.

Source/WebCore:

Correctly breaking lines after inline replaced elements that follow inline flows. Previously, alternating
these two types of elements would cause us to increase our preferred width forever.

Test: fast/block/block-with-inline-replaced-children-in-inline-flows.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeInlinePreferredLogicalWidths):

LayoutTests:

* fast/block/block-with-inline-replaced-children-in-inline-flows-expected.html: Added.
* fast/block/block-with-inline-replaced-children-in-inline-flows.html: Added.


Canonical link: https://commits.webkit.org/117324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131359 268f45cc-cd09-0410-ab3c-d52691b4dbfc